iotpy_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-iotpy
spec:
  type: ClusterIP 
  ports:
  - port: 80 
    targetPort: 8085
  selector:
    app: iotpy
