ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: localhost 
    http:
      paths:
      - path: /iotpy
        backend:
          serviceName: svc-iotpy 
          servicePort: 80
